[gd_scene load_steps=13 format=3 uid="uid://bvam1xh7k65vn"]

[ext_resource type="PackedScene" uid="uid://ckgajq8xdkarf" path="res://models/cart.gltf" id="1_3ikog"]
[ext_resource type="Script" path="res://models/cart.gd" id="1_tj38k"]
[ext_resource type="PackedScene" uid="uid://cru1p2queh6vo" path="res://ai_points/duck_cover.tscn" id="2_b1jne"]
[ext_resource type="PackedScene" uid="uid://dg3g1jr7l1s5q" path="res://interactable.tscn" id="4_l5s8a"]
[ext_resource type="AudioStream" uid="uid://cquxsw3e3hx5b" path="res://sfx/cart.wav" id="5_8lmdj"]
[ext_resource type="AudioStream" uid="uid://deaaa7gqod534" path="res://sfx/metal_hit.wav" id="6_dcof8"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_y2trm"]
friction = 0.5

[sub_resource type="BoxShape3D" id="BoxShape3D_0c1af"]
size = Vector3(0.4, 0.15, 0.55)

[sub_resource type="BoxShape3D" id="BoxShape3D_cylly"]
size = Vector3(0.4, 0.05, 0.550488)

[sub_resource type="BoxShape3D" id="BoxShape3D_b76gn"]
size = Vector3(0.05, 0.55, 0.55)

[sub_resource type="BoxShape3D" id="BoxShape3D_idn2q"]
size = Vector3(0.4, 0.55, 0.55)

[sub_resource type="SphereShape3D" id="SphereShape3D_7npyr"]
radius = 0.6

[node name="Cart" type="RigidBody3D" node_paths=PackedStringArray("covers")]
collision_layer = 5
collision_mask = 9
axis_lock_angular_x = true
axis_lock_angular_z = true
mass = 5.0
physics_material_override = SubResource("PhysicsMaterial_y2trm")
contact_monitor = true
max_contacts_reported = 4
script = ExtResource("1_tj38k")
covers = [NodePath("DuckCover"), NodePath("DuckCover2")]

[node name="cart" parent="." instance=ExtResource("1_3ikog")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.075, 0.025)
shape = SubResource("BoxShape3D_0c1af")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.525, 0.025)
shape = SubResource("BoxShape3D_cylly")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.175, 0.275, 0.025)
shape = SubResource("BoxShape3D_b76gn")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.175, 0.275, 0.025)
shape = SubResource("BoxShape3D_b76gn")

[node name="DuckCover" parent="." instance=ExtResource("2_b1jne")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.440314, 0, 0)
unsafe_distance = 0.0
enabled = false

[node name="DuckCover2" parent="." instance=ExtResource("2_b1jne")]
transform = Transform3D(1.19249e-08, 0, -1, 0, 1, 0, 1, 0, 1.19249e-08, -0.44, 0, 0)
unsafe_distance = 0.0
enabled = false

[node name="NavigationCollision" type="StaticBody3D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="NavigationCollision"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.275905, 0.0304919)
shape = SubResource("BoxShape3D_idn2q")

[node name="Interactable" parent="." node_paths=PackedStringArray("collision") instance=ExtResource("4_l5s8a")]
collision = NodePath("../Area3D")

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 32
input_ray_pickable = false
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("SphereShape3D_7npyr")

[node name="RollingAudio" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5_8lmdj")
unit_size = 2.0

[node name="HitAudio" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("6_dcof8")
unit_size = 4.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="interacted" from="Interactable" to="." method="_on_interactable_interacted"]
